# luna

./: .gitignore  .gitmodules  Cargo.toml  README.md  avi.html  flake.nix  install-platform.js  luna.sln  network.json  newCode.txt  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  rust-toolchain.toml  rustfmt.toml  sequences.html  shell.nix  system.html  valves.html  vite.config.ts
.devcontainer/arm-builder/: DockerFile
.direnv/: flake-profile-2-link
.github/workflows/: automated-CI-CD.yaml  build_docker.yaml  build_nodes.yml  dependency.yaml  pr_comments.yaml  pull_request.yaml  rust.yaml
BarometerGain/: Manifest.toml  Project.toml  README.md  fadingmemorystep.jl  fastecef2alt.jl  interp.jl  noisetest.jl  vecmathutils.jl  writehvalues.jl  writetojld.jl
ahrs/: Cargo.toml  default.nix
ahrs/src/: adc.rs  command.rs  communication.rs  driver.rs  file_logger.rs  main.rs  pins.rs  pins.sh  state.rs
airlock/: Cargo.toml
airlock/src/: main.rs
bms/: Cargo.toml  default.nix
bms/src/: adc.rs  command.rs  communication.rs  gpio.rs  main.rs  pins.rs  pins.sh  protocol.rs  state.rs
common/: Cargo.toml  README.md  build.rs  default.nix
common/compaq/: Cargo.toml
common/compaq/compaq-core/: Cargo.toml
common/compaq/compaq-core/src/: compress.rs  lib.rs
common/compaq/compaq-derive/: Cargo.toml
common/compaq/compaq-derive/src/: lib.rs
common/compaq/src/: lib.rs
common/src/: comm.rs  lib.rs
common/src/comm/: ahrs.rs  bms.rs  ctv.rs  dbms.rs  fc_sensors.rs  flight.rs  gpio.rs  gui.rs  igniter.rs  rbf.rs  reco.rs  sam.rs  tcmod.rs  vehicle.rs
common/src/sequence/: device.rs  func.rs  mod.rs  unit.rs
csvable/: Cargo.toml
csvable_proc/: Cargo.toml
ctv/: Cargo.toml
ctv-flight2/: Cargo.toml
darcy_bms/: Cargo.toml
dbms/: Cargo.toml
flash/: Cargo.toml  default.nix
flight/: Cargo.toml  README.md  deploy.sh
flight/src/: forwarder.rs  handler.rs  main.rs  state.rs
flight/src/switchboard/: commander.rs  defibrillator.rs  lifetime.rs  mod.rs  worker.rs
flight2/: Cargo.toml  GPS-logging.md  README.md  build.rs  default.nix
flight2/scripts/: apply_tel_routing.sh
flight2/src/: abort_stage.rs  cli.rs  common_so.rs  control.rs  device.rs  file_logger.rs  ftel.rs  gps.rs  imu_logger.rs  main.rs  sensors.rs  sequence.rs  servo.rs  state.rs
flight2/src/control/: lqr.rs
gpio-test/: Cargo.toml
gui/: .gitignore  .gitmodules  .prettierrc  README.md  abort-stages.html  ahrs.html  avi.html  bms.html  default.nix  fc-sensors.html  fc_sensors.html  igniter.html  index.html  install-platform.js  package-lock.json  package.json  playwright.config.ts  plotter.html  rbf.html  reco-flasher.html  reco.html  sam.html  sensors.html  sequences.html  splashscreen.html  system.html  tel.html  tsconfig.json  valves.html  vite.config.ts
igniter/: Cargo.toml
os/: default.nix
reco/: .cproject  .mxproject  .project  ASM330LHGB1.c  ASM330LHGB1.h  LIS3MDL.c  LIS3MDL.h  MS5611.c  MS5611.h  README.md  RecoBoard Debug.cfg  RecoBoard.ioc  RecoBoardRev5 Debug.launch  RecoBoardRev5 EKF Testing.launch  RecoBoardRev5 Perf Analysis.launch  RecoBoardRev5.ioc  SPI_Device.h  STM32H573RITX_FLASH.ld  STM32H573RITX_RAM.ld  communications.c  communications.h  fatfs_sd.c  main.c  run_MEKF.ipynb  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c
run_scripts/: hets-setup.sh  hets_testing.sh  vespula-setup.sh  yjspclose.sh
sam/: Cargo.toml  README.md  default.nix  mods.dtb  mods.dts
sam/.cargo/: config.toml
sam/src/: Makefile  adc.rs  command.rs  communication.rs  controlmodule.c  data.rs  discovery.rs  gpio.rs  kernelmod.c  lib.rs  main.rs  mocks.rs  newadc.rs  newstate.rs  pins.rs  pins.sh  python.rs  state.rs  tc.rs  version.rs
servo/: API.md  Cargo.toml  README.md  default.nix  test.csv
servo/src/: lib.rs  main.rs
servo/src/interface/: display.rs  mod.rs
servo/src/migrations/: bootstrap.sql
servo/src/migrations/1/: down.sql  up.sql
servo/src/migrations/2/: down.sql  up.sql
servo/src/migrations/3/: down.sql  up.sql
servo/src/migrations/4/: down.sql  up.sql
servo/src/migrations/5/: down.sql  up.sql
servo/src/migrations/6/: down.sql  up.sql
servo/src/migrations/7/: down.sql  up.sql
servo/src/migrations/8/: down.sql  up.sql
servo/src/server/: database.rs  error.rs  flight.rs  mod.rs  telemetry.rs
servo/src/server/routes/: admin.rs  command.rs  data.rs  mappings.rs  mod.rs  sequence.rs  trigger.rs
servo/src/tool/: clean.rs  deploy.rs  emulate.rs  export.rs  locate.rs  mod.rs  purge_data.rs  purge_states.rs  run.rs  serve.rs  sql.rs  upload.rs
simulator/: Cargo.toml
sitl/: Isolab.md  Loader.cs  SITL.csproj  default.nix
sitl/isolab/: Cargo.toml
sitl/isolab/src/: args.rs  client.rs  lab.rs  lib.rs  main.rs  process.rs
sitl/isolab/src/components/: sam.rs
sitl/isolab/src/scenarios/: mod.rs
sitl/isolab/src/topology/: mod.rs  servo_flight.rs
src/: App.css  appdata.tsx  comm.tsx  commands.tsx  devices.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
tel/: Cargo.toml  README.md  debug.nix  default.nix  deploy.sh  flake.nix  namespace.sh  release.nix  test.py
tel/.cargo/: config.toml
tel/brain/: Cargo.toml  default.nix
tel/brain/src/: main.rs
tel/deployment/: flight.nix  ground.nix
tel/deployments/: devkit.nix  flight.nix  ground.nix
tel/hardware/: rpi-4b.nix  rpi-cm4.nix
tel/keys/: rsa.pem
tel/keys/devkit/: ed25519.pem  ed25519.pub  rsa.pub
tel/keys/flight/: ed25519.pem  ed25519.pub  rsa.pem  rsa.pub
tel/keys/ground/: ed25519.pem  ed25519.pub  rsa.pem  rsa.pub
tel/overlays/: spi0-cs2.dtso  sx1280.dtso
tel/platform/: 4b.nix  cm4.nix
tel/scripts/: lab_sam_mappings.json  setup_netns_lab.sh  teardown_netns_lab.sh  toggle_umbilical.sh
tel/simulator/: Cargo.toml  default.nix
tel/simulator/src/: main.rs
tel/src/: main.rs  pins.rs  pins.sh  scrap.rs
tel/src/gpio/: mod.rs
tel/src/sx1280/: device.rs  sx1280.rs
tests/: README.md  coverage-hil.bat  coverage-hil.sh  coverage.bat  coverage.sh  pytest.ini
utility/: Cargo.toml  README.md  batch_process.py  default.nix
utility/src/: main.rs
(+442 files in other folders)
