[workspace]
members = [
  "ahrs",
  "bms",
  "common",
  "csvable",
  "csvable_proc",
  "firmware/ads114s06",
  "firmware/imu",
  "firmware/imu-testing",
  "firmware/lis2mdl",
  "firmware/magnetometer-testing",
  "firmware/zedf9p04b",
  "firmware/reco",
  "flight2",
  "sam",
  "servo",
  "utility"
]
exclude = ["gui/src-tauri"]
resolver = "2"
