[workspace]
members = [
  "ahrs",
  "bms",
  "common",
  "firmware/ads114s06",
  "firmware/imu",
  "firmware/imu-testing",
  "firmware/lis2mdl",
  "firmware/magnetometer-testing",
  "firmware/ms5611",
  "firmware/barometer-testing",
  "flight2",
  "sam",
  "servo",
  "utility",
]
exclude = ["gui/src-tauri"]
resolver = "2"
