[package]
name = "ahrs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = "4.5.29"
common = { path = "../common", features = ["sequences"] }
imu = { path = "../firmware/imu" }
jeflog = "0.1.0"
lis2mdl = { path = "../firmware/lis2mdl" }
ms5611 = { version = "0.1.0", path = "../firmware/ms5611" }
once_cell = "1.20.3"
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
spidev = "0.6.0"
tokio = { version = "1.48.0", default-features = false, features = ["sync"] } # required for tokio::sync::watch; no async used
