[package]
name = "bms"
version = "0.1.0"
edition = "2021"

[dependencies]
ads114s06 = { path = "../firmware/ads114s06" }
ads124s06 = { path = "../firmware/ads124s06" }
common = { path = "../common", features = ["gpio"]}
postcard = { version = "1.0.8", features = ["alloc"] }
jeflog = "0.1.0"
spidev = "0.6.0"
clap = "4.5.29"
once_cell = "1.20.3"
hostname = "0.4.0"
