[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jeflog = "0.1.0"
postcard = { version = "^1", features = ["alloc", "experimental-derive"] }
pyo3 = { version = "0.20.3", features = ["abi3-py38", "extension-module"], optional = true }
rusqlite = { version = "0.30", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
libc = { version = "0.2.159", optional = true }
bytecheck = { version = "~0.6.8", default-features = false }
rkyv = { version = "0.7.40", features = ["validation", "strict"] }
mmap-sync = "2.0.1"
serde_with = "3.15.1"

[dev-dependencies]
anyhow = "1.0.80"
postcard = { version = "^1", features = ["alloc"] }
serde_json = "1.0.111"

[features]
sequences = ["dep:pyo3"]
gpio = ["dep:libc"]
