[package]
name = "flight"
version = "1.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
common = { git = "https://github.com/gt-space/luna.git", features = ["sequences"]}
hostname = "0.3.1"
jeflog = "0.1.0"
postcard = { version = "1.0.8", features = ["alloc"] }
pyo3 = "0.20"
serde = { version = "1.0", features = ["derive"] }