[package]
name = "flight-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = { version = "0.5", features = ["all"] } 
common = { path = "../common", features = ["sequences", "gpio"]}
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
mmap-sync = "2.0.1"
wyhash = "0.5.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zedf9p04b = { path = "../firmware/zedf9p04b" }
reco = { path = "../firmware/reco" }
imu = { path = "../firmware/imu" }
lis2mdl = { path = "../firmware/lis2mdl" }
ms5611 = { version = "0.1.0", path = "../firmware/ms5611" }
spidev = "0.6.0"

[profile.release]
debug = true
