[package]
name = "sam"
authors = ["Renee Garg"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ads114s06 = { path = "../firmware/ads114s06" }
common = { path = "../common", features = ["gpio"] }
spidev = "0.6.0"
dns-lookup = "2.0.2"
postcard = { version = "1.0.8", features = ["alloc"] }
chrono = "0.4"
jeflog = "0.1.0"
hostname = "0.4.0"