[package]
name = "sam"
authors = ["Renee Garg"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spidev = "0.5.1"
dns-lookup = "2.0.2"
common = { path = "../common", features = ["gpio"] }
libc = "0.2.150"
postcard = { version = "1.0.8", features = ["alloc"] }
chrono = "0.4"
jeflog = "0.1.0"
hostname = "0.3.1"