[package]
name = "tel-sw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sx1280 = { path = "../firmware/sx1280" }
common = { path = "../common", features = ["gpio"] }
spidev = "0.6.0"
libc = "0.2.150"
once_cell = "1.10"
