[package]
name = "postcard-to-csv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
common = { path = "../common" }
postcard = { version = "1.0.8", features = ["alloc"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

